# mutagent

./: .gitignore  README.md  pyproject.toml
docs/archive/: 2026-02-15-feature-config-system.md  2026-02-15-feature-streaming-output.md  2026-02-16-refactor-migrate-to-mutobj.md  2026-02-16-refactor-remove-asyncio.md  2026-02-17-bugfix-stop-reason-tool-calls-dropped.md  2026-02-17-feature-agent-evolution-robustness.md  2026-02-17-feature-logging-system.md  2026-02-19-refactor-source-reorganization.md  2026-02-20-feature-interactive-blocks.md  2026-02-20-feature-tool-evolution-lifecycle.md  2026-02-21-bugfix-syntax-highlight.md  2026-02-21-feature-syntax-highlight.md  2026-02-22-feature-log-query-enhancements.md  2026-02-26-adr-async-architecture.md  2026-02-26-feature-log-query-enhancement.md  2026-03-01-feature-message-model.md  2026-03-01-refactor-agent-run.md  2026-03-04-bugfix-toolkit-discovery.md  2026-03-09-bugfix-pyright-type-errors.md  2026-03-12-refactor-net-declarations.md  2026-03-12-refactor-net-layer.md
docs/specifications/: feature-access-log.md  known-issues.md  (+15 more)
tests/: conftest.py  test_agent.py  test_ansi.py  test_base.py  test_basic.py  test_claude_impl.py  test_client.py  test_config.py  test_e2e.py  test_essential_tools.py  test_inplace_update.py  test_log_query.py  test_logging.py  test_mcp_multi_view.py  test_messages.py  test_module_manager.py  test_openai_provider.py  test_proxy_protocol.py  test_rich_extras.py  test_save_module_config.py  test_schema.py  test_selector.py  test_server_views.py  test_tool_set.py  test_userio.py  test_web_toolkit.py
(+72 files in other folders)
