[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mutagent"
version = "0.5.999"
description = "A Python AI Agent framework for runtime self-iterating code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "tiwb"},
]
keywords = ["ai", "agent", "llm", "runtime", "hot-reload"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mutobj~=0.5.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]
tui = [
    "textual>=0.40",
]
web = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
]
web-extract = [
    "readability-lxml>=0.8",
    "markdownify>=1.0",
]

[project.urls]
Homepage = "https://github.com/tiwb/mutagent"
Repository = "https://github.com/tiwb/mutagent"

[tool.setuptools.packages.find]
where = ["src"]
include = ["mutagent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.pyright]
pythonVersion = "3.11"
extraPaths = ["src"]
